<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="localing">正在定位</string>
    <string name="app_boot">开机启动</string>
    <string name="app_uninstall">卸载</string>
    <string name="app_clean">清理缓存</string>
    <string name="app_delete">长按OK删除应用</string>
    <string name="app_name">桌面</string>
    <string name="action_settings">Settings</string>
    <string name="Locating">正在定位</string>
    <string name="NetErro">网络未连接</string>
    <string name="city_pick">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="auto_city">自动获取城市</string>
    <string name="auto">自动</string>
    <string name="tab_tvlive">超级电视</string>
    <string name="tab_video">海量影视</string>
    <string name="tab_education">儿童教育</string>
    <string name="tab_game">精彩游戏</string>
    <string name="tab_health">健康养生</string>
    <string name="tab_recently">最近打开</string>
    <string name="tab_tools">工具设置</string>
    <string name="boot_removed">已取消开机启动</string>
    <string name="boot_app">已设置“%s”为开机启动程序</string>
    <string name="Add">添加</string>
    <string name="CleanMaster">深度优化</string>
    <string name="CleanMaster2">清理缓存</string>
    <string name="CleanedMemory">已清理 ：%1$s MB 当前可用内存为：%2$s M</string>
    <string name="HotKey">按键直达</string>
    <string name="BootStart">开机启动</string>
    <string name="WlanAP">Wifi-热点</string>
    <string name="QuickInstall">快速装机</string>
    <string name="MultiScreen">多屏互动</string>
    <string name="FileManager">文件管理</string>
    <string name="NetWorkSetting">网络设置</string>
    <string name="AppList">我的应用</string>
    <string name="AppInstaller">应用安装器</string>
    <string name="Settings">系统设置</string>
    <string name="Changebg">背景切换</string>
    <string name="quicktab">快捷桌面</string>
    <string name="Calculator">计算器</string>
    <string name="str_cloudy">多云</string>
    <string name="str_sunny">晴</string>
    <string name="str_shade">阴</string>
    <string name="str_smoke">浮尘</string>
    <string name="str_h_sand_storm">强沙尘暴</string>
    <string name="str_sand_storm">沙尘暴</string>
    <string name="str_fog">雾</string>
    <string name="str_sand_blowing">扬沙</string>
    <string name="str_s_snow">小雪</string>
    <string name="str_m_snow">中雪</string>
    <string name="str_l_snow">大雪</string>
    <string name="str_h_snow">暴雪</string>
    <string name="str_snow_shower">阵雪</string>
    <string name="str_s_rain">小雨</string>
    <string name="str_m_rain">中雨</string>
    <string name="str_l_rain">大雨</string>
    <string name="str_h_rain">暴雨</string>
    <string name="str_hh_rain">大暴雨</string>
    <string name="str_hhh_rain">特大暴雨</string>
    <string name="str_shower">阵雨</string>
    <string name="str_thunder_shower">雷阵雨</string>
    <string name="NetSpeed">网络测速</string>
    <string name="title_activity_app_list">AppListActivity</string>
    <string name="bgchange">请选择桌面背景</string>
    <string name="AppListLongTip">按菜单选择操作</string>
    <string name="AppListLongTip2">不可卸载</string>
    <string name="AutoApp">请选择开机启动的应用</string>
    <string name="App_tip1">长按OK删除应用</string>
    <string name="App_tip2">更多应用请往下</string>
    <string name="AppInfo_downloading">应用正在下载，退出将中断。是否结束下载？</string>
    <string name="Cancel">取消</string>
    <string name="Exit">结束下载</string>
    <string name="Already_add">您已经添加该应用！</string>
    <string name="title_activity_bgchange">BgchangeActivity</string>
    <string name="title_activity_quick">QuickActivity</string>
    <string name="shortcutp">请您自定义首页看电视、看电影的应用</string>
    <string name="TVapp">请选择看电视启动的应用</string>
    <string name="MOVIEapp">请选择看电影启动的应用</string>
    <string name="bg_settings">成功设置为背景</string>
    <string name="wifi_account">账户:IDER</string>
    <string name="wifi_pwd">密码:IDER</string>
    <string name="welcome">,欢迎你！</string>
</resources>
