<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:ider="http://schemas.android.com/apk/res/com.ider.launcher"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <com.box.views.AlwaysMarqueeTextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/localing"
        android:textSize="20sp"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/net_state"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="top|right"
        android:layout_marginRight="200dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_foucd"
        android:focusable="true"
        android:src="@drawable/setup"/>

    <LinearLayout
        android:id="@+id/np_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="80dp"
        android:layout_marginTop="30dip"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temperature"
            style="@style/TopBarText"
            android:visibility="gone"
            android:text="@string/wifi_account"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/temperaturetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/wifi_pwd"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/weather"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/fine"/>

        <com.box.views.MyClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </com.box.views.MyClock>

<!--
        <com.box.views.MyDigitalClock
            android:id="@+id/clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            ider:format="kk:mm"/>

        <com.box.views.MyDigitalClock
            android:id="@+id/clock_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:textColor="@color/white"
            android:textScaleX="1.1"
            android:textSize="15sp"
            ider:format="yyyy年MM月dd日"/>-->


    </LinearLayout>

</FrameLayout>